<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.auth.createProfile.CreateProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_marginTop="6dp"
            android:background="@color/blue"
            android:contentDescription="@string/button_to_get_back_to_edit_phone_number_fragment"
            android:src="@drawable/baseline_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/profile"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ib_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guid_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guid_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/tv_photo_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/select_a_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_profile" />


    <ImageView
        android:id="@+id/im_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_s_profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_profile_image"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guid_bottom"
        app:layout_constraintDimensionRatio="0:0"
        app:layout_constraintEnd_toEndOf="@+id/guidLine2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guid_top" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/choose_your_name_and_load_an_photo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_til_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/EditTextBorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name_necessary"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@id/et_name"
        app:expandedHintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/gl_til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="36dp"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_til_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_surname"
        style="@style/EditTextBorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeColor="#f5f5f5"
        app:hintEnabled="false"
        app:layout_constraintTop_toTopOf="@id/gl_til_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_unnecessary"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#5393D0"
        app:cornerRadius="20dp"
        android:text="@string/proceed_russian"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_text"
        android:layout_marginTop="175dp"
        />






    <ImageButton
        android:id="@+id/check_byn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@color/blue"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>