<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.auth.createProfile.DeniedPermissionsDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt_dialog_permission_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/geekMessenger_application_cant_function_without_needed_permissions_russian"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="6dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/txt_dialog_permission_title"
            app:layout_constraintStart_toStartOf="@id/txt_dialog_permission_title"
            app:layout_constraintTop_toBottomOf="@id/txt_dialog_permission_title" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_russian"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/line" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_russian"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toTopOf="@id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>